Replace login view with django auth login view, properly authenticates user

--- a/vanilladev/login_only_auth/templates/login_only_auth/login.html
+++ b/vanilladev/login_only_auth/templates/login_only_auth/login.html
@@ -6,7 +6,7 @@
     <div class="d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
             <h1 class="text-center">Login</h1>
-            <form action="/your-name/" method="post">
+            <form action="" method="post">
                 {% csrf_token %}
                 {{ form }}
                 <input type="submit" value="Submit">
