--- a/vanilladev/login_only_auth/templates/login_only_auth/login.html
+++ b/vanilladev/login_only_auth/templates/login_only_auth/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap5 %}
 
 {% block content %}
 <div class="container d-flex flex-column justify-content-center align-items-center" id="login-container">
@@ -8,11 +9,14 @@
             <h1 class="text-center">Login</h1>
             <form action="" method="post">
                 {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Submit">
+                {% bootstrap_form form %}
+                {% buttons %}
+                <button type="submit" class="btn btn-primary">
+                    Submit
+                </button>
+                {% endbuttons %}
             </form>
         </div>
     </div>
 </div>
-
 {% endblock %}
