--- a/bsdesign-output/assets/css/styles.css
+++ b/bsdesign-output/assets/css/styles.css
@@ -73,6 +73,8 @@ body {
 .project-column > div {
   background-color: #0b0b0b;
   padding: 10px;
+  border-width: 1px;
+  border-style: solid;
 }
 
 .link-readmore:hover {
@@ -143,5 +145,9 @@ footer > div {
   height: 100px;
   background-color: #111111;
   margin-top: 50px;
+}
+
+#feature_webdev {
+  background: var(--bs-blue);
 }
 
