Fix css and line-awesome cdn

--- a/vanilladev/vanilladev/templates/base.html
+++ b/vanilladev/vanilladev/templates/base.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="{% static 'fonts/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'fonts/fontawesome5-overrides.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body class="text-light">
