Finish Sentence lol

--- a/vanilladev/home/templates/home/index.html
+++ b/vanilladev/home/templates/home/index.html
@@ -102,7 +102,7 @@
                         <div class="d-flex justify-content-between">
                             <h5>Aion Classic Sentiment Analysis</h5><span><strong>ARTICLE&nbsp;</strong><i class="fab fa-connectdevelop"></i></span>
                         </div>
-                        <p>In the summer of 2021, the classic MMORPG Aion was re-released in the North American area. This version featured the content available near its original launch, but introduced new microtransaction systems which upset the originally intended game design. This article</p>
+                        <p>In the summer of 2021, the classic MMORPG Aion was re-released in the North American area. This version featured the content available near its original launch, but introduced new microtransaction systems which upset the originally intended game design. This article explores the public response to this decision.</p>
                     </div><a class="link-readmore" href="#">Read More &gt;</a>
                 </div>
             </div>
