--- a/vanilladev/blog/templates/blog/categories.html
+++ b/vanilladev/blog/templates/blog/categories.html
@@ -1,1 +1,35 @@
-{{ form.as_table }}
+{% extends 'base.html' %}
+
+{% block content %}
+<hr />
+<h1 class="text-center">Manage Categories</h1>
+<hr />
+<div class="container">
+    {{ formset.non_form_errors.as_ul }}
+    <table id="formset" class="form table text-white">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th style="width:20px;">Delete</th>
+            </tr>
+        </thead>
+        {% for form in formset.forms %}
+        <tr class="{% cycle row1 row2 %}">
+            {% for field in form.visible_fields %}
+            <td>
+                {# Include the hidden fields in the form #}
+                {% if forloop.first %}
+                {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+                {% endfor %}
+                {% endif %}
+                {{ field.errors.as_ul }}
+                {{ field }}
+            </td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
+    <input type="submit" class="btn btn-success" value="Update" />
+</div>
+{% endblock %}
