--- a/bsdesign-output/assets/css/styles.css
+++ b/bsdesign-output/assets/css/styles.css
@@ -67,7 +67,7 @@ body {
 }
 
 .link-readmore {
-  color: #fb8d8d;
+  color: #fb8d8d !important;
 }
 
 .project-column > div {
@@ -78,7 +78,7 @@ body {
 }
 
 .link-readmore:hover {
-  color: #fb8d8d;
+  color: #fb8d8d !important;
 }
 
 .project-column span {
@@ -87,7 +87,6 @@ body {
 
 .icon-large {
   font-size: 6em;
-  margin-bottom: 15px;
 }
 
 @media (max-width: 991) {
@@ -149,5 +148,98 @@ footer > div {
 
 #feature_webdev {
   background: var(--bs-blue);
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  color: white;
+}
+
+#blogpost-container {
+  min-height: 75vh;
+}
+
+#table-delete {
+  width: 20px;
+}
+
+#container-category-management {
+  min-height: 70vh;
+}
+
+#btn-update-categories {
+  width: 150px;
+}
+
+a.nav-link {
+  color: white;
+}
+
+a.active {
+  color: black;
+}
+
+a.nav-link:hover {
+  color: white;
+}
+
+a.nav-link:focus {
+  color: white;
+}
+
+.project-pane {
+  min-height: 100px;
+  border-radius: 0px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-width: 2px;
+  border-style: solid;
+}
+
+#tabs-project {
+  border-bottom: 0px !important;
+}
+
+.header-container {
+  border-top: 1px solid;
+  border-bottom: 1px solid white;
+  padding: 15px 50px 15px 50px;
+  margin-bottom: 5vh;
+}
+
+.navlink {
+  width: 200px;
+}
+
+.project-container {
+}
+
+.project-nutshell-container {
+  background: #141414;
+  padding: 25px;
+  border: 1px solid;
+}
+
+.consistent-height.tab-content {
+  display: flex;
+}
+
+.consistent-height.tab-content > .tab-pane {
+  display: block;
+  visibility: hidden;
+  margin-right: -100%;
+  width: 100%;
+}
+
+.consistent-height.tab-content > .active {
+  visibility: visible;
+}
+
+.django-ckeditor-widget {
+  width: 100%;
 }
 
