--- a/vanilladev/vanilladev/assets/css/styles.css
+++ b/vanilladev/vanilladev/assets/css/styles.css
@@ -1,13 +1,13 @@
-#frontpage_header {
-  background: url("bannerimg.jpg") center / cover no-repeat;
-  height: calc(100vh - 100px);
+#frontpage-header {
+  background: url("../../assets/img/pexels-nao-triponez-792199.jpg") center / cover no-repeat;
+  height: 70vh;
   max-width: 2200px;
   margin: auto;
-  box-shadow: inset 0 0 20px 20px black;
 }
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: Assistant, sans-serif;
+  background-color: var(--bs-gray-100);
 }
 
 .feature i {
@@ -43,10 +43,6 @@ h1 {
   height: 100px;
 }
 
-body {
-  background: #000000;
-}
-
 @media (min-width: 768px) {
   .two-columns {
     -webkit-column-count: 2;
@@ -71,10 +67,11 @@ body {
 }
 
 .project-column > div {
-  background-color: #0b0b0b;
+  background-color: #212121;
   padding: 10px;
   border-width: 1px;
   border-style: solid;
+  color: var(--bs-light);
 }
 
 .link-readmore:hover {
@@ -136,13 +133,13 @@ body {
 }
 
 #login-container {
-  min-height: 95vh;
+  min-height: 85vh;
   width: 100%;
 }
 
 footer > div {
   height: 100px;
-  background-color: #111111;
+  background-color: #232323;
   margin-top: 50px;
 }
 
@@ -151,15 +148,11 @@ footer > div {
 }
 
 a {
-  color: white;
+  color: black;
 }
 
 a:hover {
-  color: white;
-}
-
-#blogpost-container {
-  min-height: 75vh;
+  color: black;
 }
 
 #table-delete {
@@ -206,13 +199,17 @@ a.nav-link:focus {
 
 .header-container {
   border-top: 1px solid;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid;
   padding: 15px 50px 15px 50px;
   margin-bottom: 5vh;
+  border-color: #bbbbbb;
 }
 
 .navlink {
   width: 200px;
+}
+
+.project-container {
 }
 
 .project-nutshell-container {
@@ -239,3 +236,31 @@ a.nav-link:focus {
 .django-ckeditor-widget {
   width: 100%;
 }
+
+.nav-item {
+  font-size: 1.2rem;
+}
+
+.nav-link:hover {
+  text-decoration: underline solid var(--bs-dark);
+}
+
+.nav-link {
+  text-decoration: underline solid transparent;
+  transition: text-decoration 1s ease, color 0.5s ease;
+  text-underline-offset: 0.3em;
+}
+
+#table-blognum {
+  width: 100px;
+}
+
+.navbar-brand {
+  font-family: Assistant, sans-serif;
+  font-size: 2em;
+}
+
+.navbar-nav {
+  font-family: Assistant, sans-serif;
+}
+
