Login Page light layout

--- a/vanilladev/login_only_auth/templates/login_only_auth/login.html
+++ b/vanilladev/login_only_auth/templates/login_only_auth/login.html
@@ -4,8 +4,8 @@
 {% block content %}
 <div class="container d-flex flex-column justify-content-center align-items-center" id="login-container">
     <h1 class="text-center">Administrator Login</h1>
-    <div class="d-flex justify-content-center align-items-center">
-        <div class="d-flex flex-column" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
+    <div class="d-flex justify-content-center align-items-center w-100">
+        <div class="d-flex flex-column text-light" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
             <h1 class="text-center">Login</h1>
             <form action="" method="post">
                 {% csrf_token %}
