--- a/vanilladev/blog/templates/blog/change.html
+++ b/vanilladev/blog/templates/blog/change.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<hr />
-<h1 class="text-center">Add/Edit Blogpost</h1>
-<hr />
+<div class="container header-container">
+    <h1 class="text-center">Add/Edit Blogpost</h1>
+</div>
 <div class="container">
     <form action="" method="post">
         {% csrf_token %}
