--- a/vanilladev/blog/templates/blog/post.html
+++ b/vanilladev/blog/templates/blog/post.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="frontpage-header" class="mb-2"></div>
+<div id="frontpage-header" class="mb-3"></div>
 <div class="container">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#"><span>Home</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'index' %}"><span>Home</span></a></li>
         <li class="breadcrumb-item"><a href="#"><span>Blog</span></a></li>
-        <li class="breadcrumb-item"><a href="#"><span>Project Update</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'post' post.id %}"><span>Project Update</span></a></li>
     </ol>
 </div>
 <div class="container header-container">
