Fix app names, url linking on base page, blog overview and blog pages

--- a/vanilladev/blog/templates/blog/overview.html
+++ b/vanilladev/blog/templates/blog/overview.html
@@ -3,8 +3,8 @@
 <div id="frontpage-header" class="mb-3"></div>
     <div class="container">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><span>Home</span></a></li>
-            <li class="breadcrumb-item"><a href="#"><span>Blog</span></a></li>
+            <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+            <li class="breadcrumb-item"><a href="{% url 'blog:overview' %}"><span>Blog</span></a></li>
         </ol>
     </div>
     <div class="container header-container">
