--- a/vanilladev/blog/templates/blog/post.html
+++ b/vanilladev/blog/templates/blog/post.html
@@ -3,9 +3,9 @@
 <div id="frontpage-header" class="mb-3"></div>
 <div class="container">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'index' %}"><span>Home</span></a></li>
-        <li class="breadcrumb-item"><a href="#"><span>Blog</span></a></li>
-        <li class="breadcrumb-item"><a href="{% url 'post' post.id %}"><span>Project Update</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'blog:overview' %}"><span>Blog</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'blog:post' post.id %}"><span>Project Update</span></a></li>
     </ol>
 </div>
 <div class="container header-container">
