--- a/vanilladev/vanilladev/templates/base.html
+++ b/vanilladev/vanilladev/templates/base.html
@@ -24,7 +24,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" id="navbar-main">
-        <div class="container"><a class="navbar-brand" href="#">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="{% url 'home:index' %}">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto" style="font-family: Assistant, sans-serif;">
                     <li class="nav-item"><a class="nav-link active" href="{% url 'home:index' %}">Home</a></li>
