--- a/vanilladev/vanilladev/templates/base.html
+++ b/vanilladev/vanilladev/templates/base.html
@@ -24,9 +24,14 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" id="navbar-main">
-        <div class="container"><a class="navbar-brand" href="{% url 'home:index' %}">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home:index' %}">Vanilla Develop</a>
+            <button type="button" data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"
+                aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ms-auto" style="font-family: Assistant, sans-serif;">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="{% url 'home:index' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Side Projects</a></li>
@@ -39,11 +44,12 @@
     {% block content %}
     {% endblock %}
     <footer class="text-light">
-        <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
-            <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
+        <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla
+                2022<br></span>
+            <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i
+                        class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link"
+                    href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
         </div>
     </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
-
 </html>
