--- a/vanilladev/blog/templates/blog/change.html
+++ b/vanilladev/blog/templates/blog/change.html
@@ -5,7 +5,7 @@
     <h1 class="text-center">Add/Edit Blogpost</h1>
 </div>
 <div class="container">
-    <form action="" method="post">
+    <form action="" method="post" class="form">
         {% csrf_token %}
         {{ form.media }}
         {{ form.as_p }}
