Add logout hook and deleting blog posts

--- a/vanilladev/blog/templates/blog/post.html
+++ b/vanilladev/blog/templates/blog/post.html
@@ -9,7 +9,8 @@
     </ol>
 </div>
 <div class="container header-container">
-    <h1 class="text-center">{{post.title}}<br></h1> {% if not post.is_published %}
+    <h1 class="text-center">{{post.title}}<br></h1>
+    {% if not post.is_published %}
     <p class="text-center"><span class="badge bg-danger">Draft</span></p>
     {% endif %}
     <p class="text-center">Categories: {{categories}}</p>
@@ -29,6 +30,12 @@
     </div>
 </div>
 <div class="container">
+    <p class="text-end">
+        <form action="{% url 'blog:delete' post.id %}" method="post">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-danger" value="Delete this post"></input>
+        </form>
+    </p>
     {{post.content|safe}}
 </div>
 {% endblock %}
