--- a/vanilladev/vanilladev/templates/base.html
+++ b/vanilladev/vanilladev/templates/base.html
@@ -32,11 +32,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="{% url 'home:index' %}">Home</a></li>
+                    <li class="nav-item"><a {% if request.resolver_match.app_name == "home" %} class="active nav-link" {% else %} class="nav-link" {% endif %} href="{% url 'home:index' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Side Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Articles</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'blog:overview' %}">Blog</a></li>
+                    <li class="nav-item"><a {% if request.resolver_match.app_name == "blog" %} class="active nav-link" {% else %} class="nav-link" {% endif %} href="{% url 'blog:overview' %}">Blog</a></li>
                 </ul>
             </div>
         </div>
