--- a/vanilladev/blog/templates/blog/overview.html
+++ b/vanilladev/blog/templates/blog/overview.html
@@ -28,6 +28,9 @@
             {% endif %}
         </ul>
     </nav>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'blog:add' %}"><button class="btn btn-success mb-3">Add new post</button></a>
+    {% endif %}
     <div class="row mb-3">
         {% for post in posts %}
         <div class="col-12 col-md-6 col-xl-4 mb-4">
