--- a/vanilladev/vanilladev/assets/css/styles.css
+++ b/vanilladev/vanilladev/assets/css/styles.css
@@ -152,10 +152,6 @@ a {
   color: black;
 }
 
-a:hover {
-  color: black;
-}
-
 #table-delete {
   width: 20px;
 }
@@ -168,34 +164,18 @@ a:hover {
   width: 150px;
 }
 
-a.nav-link {
-  color: white;
-}
-
-a.active {
+a.nav-link:hover {
   color: black;
 }
 
-a.nav-link:hover {
-  color: white;
-}
-
 a.nav-link:focus {
-  color: white;
+  color: black;
 }
 
 .project-pane {
   min-height: 100px;
-  border-radius: 0px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 0px;
-  border-width: 2px;
-  border-style: solid;
-}
-
-#tabs-project {
-  border-bottom: 0px !important;
+  border-radius: 0;
+  border: 1px solid rgb(218,218,218) ;
 }
 
 .header-container {
@@ -208,12 +188,6 @@ a.nav-link:focus {
 
 .navlink {
   width: 200px;
-}
-
-.project-nutshell-container {
-  background: #141414;
-  padding: 25px;
-  border: 1px solid;
 }
 
 .consistent-height.tab-content {
@@ -235,11 +209,11 @@ a.nav-link:focus {
   width: 100%;
 }
 
-.nav-link:hover {
+.navbar-nav > * .nav-link:hover {
   text-decoration: underline solid var(--bs-dark);
 }
 
-.nav-link {
+.navbar-nav > * .nav-link {
   text-decoration: underline solid transparent;
   transition: text-decoration 1s ease, color 0.5s ease;
   text-underline-offset: 0.3em;
@@ -276,5 +250,13 @@ a.nav-link:focus {
 
 .feature > p {
   text-align: justify;
+}
+
+a.nav-link {
+  color: black;
+}
+
+a > i:hover {
+  color: #404040;
 }
 
