--- a/bsdesign-output/assets/css/styles.css
+++ b/bsdesign-output/assets/css/styles.css
@@ -175,15 +175,16 @@ a.nav-link:focus {
 .project-pane {
   min-height: 100px;
   border-radius: 0;
-  border: 1px solid rgb(218,218,218) ;
+  border: 1px solid rgb(218,218,218);
+  padding: 10px;
 }
 
 .header-container {
   border-top: 1px solid;
   border-bottom: 1px solid;
   padding: 15px 50px 15px 50px;
-  margin-bottom: 5vh;
   border-color: #bbbbbb;
+  margin-bottom: 2vh;
 }
 
 .navlink {
@@ -245,7 +246,7 @@ a.nav-link:focus {
 }
 
 .blogpagination-nav {
-  margin-bottom: 40px;
+  margin-bottom: 2vh;
 }
 
 .feature > p {
