--- a/vanilladev/blog/templates/blog/post.html
+++ b/vanilladev/blog/templates/blog/post.html
@@ -32,7 +32,7 @@
 <div class="container">
     {% if request.user.is_authenticated %}
     <div class="mb-3">
-        <a href="{% url 'blog:edit' post.id %}"><button class="btn btn-warning">Edit this post</button></a>
+        <a href="{% url 'blog:edit' post.id %}"><button class="btn btn-primary">Edit this post</button></a>
         <form action="{% url 'blog:delete' post.id %}" method="post" class="d-inline">
             {% csrf_token %}
             <input type="submit" class="btn btn-danger" value="Delete this post"></input>
