--- a/vanilladev/media/templates/media/change.html
+++ b/vanilladev/media/templates/media/change.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
+{% load bootstrap5 %}
 
 {% block content %}
 <div class="container header-container">
     <h1 class="text-center">Add/Edit File</h1>
 </div>
 <div class="container">
-    <form action="" method="post" class="form">
+    <form method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
+        {% bootstrap_form form %}
         <input type="submit" id="btn-add-image" class="btn btn-success" value="Save" />
-    </form>
     </form>
 </div>
 {% endblock %}
